# python-project-50

./: .gitignore  Makefile  Makefile.save  README.md  pyproject.toml
.github/workflows/: main.yml
gendiff/scripts/: gendiff.py
