[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "A tool whish shows the differency for 2 compared files"
authors = ["Irina Valieva <iavalieva.ds@gmail.com>"]
readme = "README.md"
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"
pyYAML = "^5.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
pytest = ">=7.1.3"
pytest-cov = "^3.0.0"
PyYAML = "^5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.pytest.ini_options]
pythonpath = [
 ".",
]

